--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "history": "^5.0.0",
+    "install": "^0.13.0",
+    "npm": "^6.14.8",
     "react": "^16.14.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.14.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
