--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-slick": "^0.27.12",
     "react-spring": "^8.0.27",
+    "react-spring-3d-carousel": "^1.2.0",
     "react-transition-group": "^4.4.1",
+    "resize-observer-polyfill": "^1.5.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.0"
   },
   "scripts": {
