--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
     "classnames": "^2.2.6",
     "history": "^5.0.0",
     "install": "^0.13.0",
-    "npm": "^6.14.8",
+    "npm": "^7.0.8",
     "react": "^16.14.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.14.0",
     "react-measure": "^2.5.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.0",
     "react-slick": "^0.27.12",
     "react-spring": "^8.0.27",
     "react-spring-3d-carousel": "^1.2.0",
     "react-transition-group": "^4.4.1",
     "resize-observer-polyfill": "^1.5.1",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
