--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
     "history": "^5.0.0",
     "install": "^0.13.0",
-    "npm": "^7.0.8",
+    "npm": "^7.0.10",
     "react": "^16.14.0",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
     "react-measure": "^2.5.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
-    "react-slick": "^0.27.12",
+    "react-slick": "^0.27.13",
     "react-spring": "^8.0.27",
     "react-spring-3d-carousel": "^1.2.0",
     "react-transition-group": "^4.4.1",
