--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.2.6",
     "history": "^5.0.0",
     "install": "^0.13.0",
+    "node-sass": "^5.0.0",
     "npm": "^7.0.10",
     "react": "^16.14.0",
     "react-addons-css-transition-group": "^15.6.2",
