--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
     "history": "^5.0.0",
     "install": "^0.13.0",
-    "node-sass": "^5.0.0",
+    "node-sass": "^4.14.1",
     "npm": "^7.0.10",
     "react": "^16.14.0",
     "react-addons-css-transition-group": "^15.6.2",
@@ -31,7 +32,9 @@
     "react-spring": "^8.0.27",
     "react-spring-3d-carousel": "^1.2.0",
     "react-transition-group": "^4.4.1",
+    "react-typist": "^2.0.5",
     "resize-observer-polyfill": "^1.5.1",
+    "simplex-noise": "^2.4.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1"
   },
