--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "hosting": {
     "public": "build",
+    "site": "kento-test",
     "rewrites": [ {
       "source": "**",
       "destination": "/index.html"
