--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@n8tb1t/use-scroll-position": "^2.0.3",
     "@react-spring/addons": "^9.0.0-beta.33",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -13,10 +14,11 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
+    "d3-ease": "^2.0.0",
     "history": "^5.0.0",
     "install": "^0.13.0",
     "node-sass": "^4.14.1",
-    "npm": "^7.0.10",
+    "npm": "^7.3.0",
     "react": "^16.14.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^1.4.0",
@@ -34,10 +36,12 @@
     "react-spring-3d-carousel": "^1.2.0",
     "react-transition-group": "^4.4.1",
     "react-typist": "^2.0.5",
+    "react-use-gesture": "^9.0.0-beta.11",
     "resize-observer-polyfill": "^1.5.1",
     "simplex-noise": "^2.4.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
+    "three": "^0.123.0",
     "vanta": "^0.5.21"
   },
   "scripts": {
