--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
-    "d3-ease": "^2.0.0",
     "history": "^5.0.0",
     "install": "^0.13.0",
-    "lethargy": "^1.0.9",
     "node-sass": "^4.14.1",
     "npm": "^7.3.0",
     "react": "^16.14.0",
@@ -27,6 +25,7 @@
     "react-intersection-observer": "^8.31.0",
     "react-measure": "^2.5.2",
     "react-motion-menu": "^0.4.4",
+    "react-pdf": "^5.1.0",
     "react-reveal": "^1.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -35,13 +34,11 @@
     "react-slick": "^0.27.13",
     "react-smooth-scrollbar": "^8.0.6",
     "react-spring": "^8.0.27",
-    "react-spring-3d-carousel": "^1.2.0",
     "react-transition-group": "^4.4.1",
     "react-typist": "^2.0.5",
     "react-use-gesture": "^9.0.0-beta.11",
     "resize-observer-polyfill": "^1.5.1",
     "simplex-noise": "^2.4.0",
-    "slick-carousel": "^1.8.1",
     "smooth-scrollbar": "^8.5.3",
     "styled-components": "^5.2.1",
     "three": "^0.123.0",
