--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Kento About Me",
+  "short_name": "Kento Portfolio",
+  "name": "Kento Kobayashi Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
